# repetit-be-fastapi

./: .dockerignore  README.md  alembic.ini  alembic.ini.old  pyproject.toml
app/: main.py
app/alembic/: env.py
app/alembic/versions/: 080e7b94fc83_remove_column_test.py  0b13a737607a_init.py  23a6a7beee68_update_user_add_topic_remove_item.py  31a3aa343c04_topics_topic_on_topics_table.py  39e3d18c8232_init.py  4e914a9009c7_init.py  70358dabd30f_fix_relationship_between_topic_and_.py  76c8cb1105b3_add_column_test.py  8b32af67e990_add_flashcards_table.py  931b5ec4f961_init_2.py  9bd007838eff_fix_relationship_between_topic_and_.py  adfee081ea73_update_relationship.py  d6b595e837e4_summon_user_and_topic_1.py
app/api/: deps.py
app/api/v1/: main.py
app/api/v1/routes/: flashcards.py  test.py  topics.py  users.py
app/core/: db.py
app/crud/: __init__.py  base.py  flashcard.py  test.py  topic.py  user.py
app/models/: __init__.py  base.py  flashcard.py  test.py  topic.py  user.py
app/schemas/: __init__.py  flashcard.py  topic.py  user.py
app/utils/: enums.py
docker/: Dockerfile  docker-compose.yml
